# icpc-reference-tester

./: .gitignore  Cargo.toml  README.md
src/: main.rs  processor.rs  scraper.rs  test_result.rs  verdicts.rs
src/processor/: mod.rs
src/scraper/: codeforces.rs  mod.rs  spoj.rs
test/: 1131A.cpp  540A-WA.cpp  540A.cpp  FENTREE.cpp
test/test_folder/: template.test.cpp
test/test_folder/sub_folder/: 1131A.test.cpp
