[package]
name = "icpc-reference-tester"
version = "0.1.0"
authors = ["Mateus de Castro <samuraiexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" }
failure = "0.1.8"
uuid = { version = "0.8", features = ["v4"] }

