[package]
name = "icpc-reference-tester"
version = "0.1.0"
authors = ["Mateus de Castro <samuraiexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", rev = "005c30d1d8e6d683f7c6e1f87b68095210821e7c" }
failure = "0.1.8"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
